@@ -127,8 +127,13 @@ public abstract boolean uploadUsingPreferences(String buildPath, String classNam
       Process process;
 
       if (Base.isMacOS()) {
-        String envp[] = { "DYLD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/mspdebug" };
-        process = Runtime.getRuntime().exec(commandArray, envp);
+        ProcessBuilder builder = new ProcessBuilder(commandArray);
+        Map<String, String> env = builder.environment();
+        env.put("DYLD_LIBRARY_PATH", Base.getHardwarePath() + "/tools/msp430/mspdebug");
+        builder.directory(new File(Base.getLM4FBasePath()));
+        process = builder.start();
+
+        //process = Runtime.getRuntime().exec(commandArray, envp);
       } else if(Base.isLinux()) {
         String envp[] = { "LD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/bin" };
         process = Runtime.getRuntime().exec(commandArray, envp);
@@ -207,8 +212,13 @@ public abstract boolean uploadUsingPreferences(String buildPath, String classNam
 		      Process process;
 
 		      if (Base.isMacOS()) {
-		        String envp[] = { "DYLD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/mspdebug" };
-		        process = Runtime.getRuntime().exec(commands, envp);
+		        ProcessBuilder builder = new ProcessBuilder(commands);
+		        Map<String, String> env = builder.environment();
+		        env.put("DYLD_LIBRARY_PATH", Base.getHardwarePath() + "/tools/msp430/mspdebug");
+		        builder.directory(new File(Base.getLM4FBasePath()));
+		        process = builder.start();
+		        
+		        //process = Runtime.getRuntime().exec(commands, envp);
 		      } else if(Base.isLinux()) {
 		        String envp[] = { "LD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/bin" };
 		        process = Runtime.getRuntime().exec(commands, envp);
